--- a/kurumsal.html
+++ b/kurumsal.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <title>Kurumsal | RAN Teknoloji</title>
-</head>
-<body>
-    <h1>Kurumsal</h1>
-    <p>
-        RAN Teknoloji; yenilikçi, güvenilir ve sürdürülebilir
-        teknoloji çözümleri üretmek amacıyla kurulmuştur.
-    </p>
-
-    <a href="index.html">← Ana Sayfaya Dön</a>
-</body>
-</html>
+  <meta charset="UTF-8">
+  <title>Kurumsal | RAN Teknoloji</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+     
