--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <title>RAN Teknoloji</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
+  <style>
     body {
       margin: 0;
       font-family: 'Inter', Arial, Helvetica, sans-serif;
@@ -40,58 +41,15 @@
     }
 
     main {
-      padding: 100px 40px;
+      padding: 120px 40px;
       max-width: 1100px;
       margin: auto;
     }
 
     h1 {
-      font-size: 42px;
+      font-size: 44px;
       margin-bottom: 20px;
     }
 
     p {
-      font-size: 18px;
-      line-height: 1.6;
-      color: #444;
-      max-width: 700px;
-    }
-
-    footer {
-      padding: 30px;
-      border-top: 1px solid #e5e5e5;
-      text-align: center;
-      font-size: 14px;
-      color: #666;
-      margin-top: 100px;
-    }
-  </style>
-</head>
-
-<body>
-
-  <header>
-    <strong>RAN TEKNOLOJİ</strong>
-    <nav>
-      <a href="index.html">Ana Sayfa</a>
-      <a href="kurumsal.html">Kurumsal</a>
-      <a href="faaliyet.html">Faaliyet Alanları</a>
-      <a href="projeler.html">Projeler</a>
-    </nav>
-  </header>
-
-  <main>
-    <h1>Kurumsal Web Sitesi</h1>
-    <p>
-      RAN Teknoloji; yenilikçi, güvenilir ve sürdürülebilir teknoloji çözümleri
-      üretmek amacıyla kurulmuş, modern yazılım ve dijital dönüşüm projelerine
-      odaklanan bir teknoloji firmasıdır.
-    </p>
-  </main>
-
-  <footer>
-    © 2026 RAN Teknoloji
-  </footer>
-
-</body>
-</html>
+      fon
