--- a/index.html
+++ b/index.html
@@ -1,97 +1,10 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>RAN Teknoloji</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Inter', Arial, Helvetica, sans-serif;
-      background: #ffffff;
-      color: #222;
-    }
-
-    header {
-      padding: 30px 40px;
-      border-bottom: 1px solid #e5e5e5;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    header strong {
-      font-size: 18px;
-      letter-spacing: 0.5px;
-    }
-
-    nav a {
-      margin-left: 20px;
-      text-decoration: none;
-      color: #222;
-      font-weight: 500;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    main {
-      padding: 120px 40px;
-      max-width: 1100px;
-      margin: auto;
-    }
-
-    h1 {
-      font-size: 44px;
-      margin-bottom: 20px;
-    }
-
-    p {
-      font-size: 18px;
-      line-height: 1.7;
-      color: #444;
-      max-width: 700px;
-    }
-
-    footer {
-      text-align: center;
-      padding: 40px;
-      font-size: 14px;
-      color: #777;
-      border-top: 1px solid #e5e5e5;
-      margin-top: 120px;
-    }
-  </style>
+  <title>Test</title>
 </head>
-
 <body>
-
-  <header>
-    <strong>RAN TEKNOLOJİ</strong>
-    <nav>
-      <a href="index.html">Ana Sayfa</a>
-      <a href="kurumsal.html">Kurumsal</a>
-      <a href="faaliyet.html">Faaliyet Alanları</a>
-      <a href="projeler.html">Projeler</a>
-    </nav>
-  </header>
-
-  <main>
-    <h1>Kurumsal Web Sitesi</h1>
-    <p>
-      RAN Teknoloji; yenilikçi, güvenilir ve sürdürülebilir teknoloji çözümleri
-      sunarak işletmelerin dijital dönüşümüne katkı sağlar.
-    </p>
-  </main>
-
-  <footer>
-    © 2026 RAN Teknoloji
-  </footer>
-
+  <h1>ÇALIŞIYOR</h1>
 </body>
 </html>
