--- a/index.html
+++ b/index.html
@@ -9,61 +9,105 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
-      font-family: 'Inter', Arial, Helvetica, sans-serif;
-      background: #ffffff;
-      color: #222;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #0f172a, #020617);
+      color: #e5e7eb;
     }
 
     header {
-      padding: 30px 40px;
-      border-bottom: 1px solid #e5e5e5;
+      padding: 28px 40px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      border-bottom: 1px solid #1e293b;
+      background: rgba(2, 6, 23, 0.9);
+      position: sticky;
+      top: 0;
+      z-index: 10;
     }
 
     header strong {
       font-size: 18px;
-      letter-spacing: 0.5px;
+      letter-spacing: 1px;
+      color: #38bdf8;
     }
 
     nav a {
-      margin-left: 20px;
+      margin-left: 24px;
       text-decoration: none;
-      color: #222;
+      color: #cbd5f5;
       font-weight: 500;
+      transition: color 0.3s ease;
     }
 
     nav a:hover {
-      text-decoration: underline;
+      color: #38bdf8;
     }
 
     main {
-      padding: 140px 40px;
       max-width: 1100px;
       margin: auto;
+      padding: 140px 40px;
     }
 
     h1 {
-      font-size: 46px;
-      margin-bottom: 20px;
+      font-size: 48px;
+      margin-bottom: 24px;
+      line-height: 1.2;
+      color: #f8fafc;
     }
 
     p {
       font-size: 18px;
-      line-height: 1.7;
-      color: #444;
-      max-width: 700px;
+      line-height: 1.8;
+      color: #cbd5f5;
+      max-width: 720px;
+    }
+
+    .cards {
+      margin-top: 80px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 24px;
+    }
+
+    .card {
+      background: rgba(15, 23, 42, 0.8);
+      border: 1px solid #1e293b;
+      border-radius: 16px;
+      padding: 32px;
+      transition: transform 0.3s ease, border 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-6px);
+      border-color: #38bdf8;
+    }
+
+    .card h3 {
+      margin-top: 0;
+      margin-bottom: 12px;
+      color: #38bdf8;
+      font-size: 20px;
+    }
+
+    .card p {
+      font-size: 15px;
+      color: #cbd5f5;
     }
 
     footer {
       text-align: center;
-      padding: 40px;
+      padding: 50px 20px;
       font-size: 14px;
-      color: #777;
-      border-top: 1px solid #e5e5e5;
+      color: #94a3b8;
+      border-top: 1px solid #1e293b;
       margin-top: 120px;
     }
   </style>
@@ -85,8 +129,25 @@
     <h1>Kurumsal Web Sitesi</h1>
     <p>
       RAN Teknoloji; yenilikçi, güvenilir ve sürdürülebilir teknoloji çözümleri
-      sunarak işletmelerin dijital dönüşümüne katkı sağlar.
+      geliştirerek işletmelerin dijital dönüşümüne güç katar.
     </p>
+
+    <div class="cards">
+      <div class="card">
+        <h3>Yazılım & Dijital</h3>
+        <p>Modern, ölçeklenebilir ve güvenli yazılım çözümleri.</p>
+      </div>
+
+      <div class="card">
+        <h3>Teknoloji Danışmanlığı</h3>
+        <p>İş süreçlerinizi teknolojiyle optimize ediyoruz.</p>
+      </div>
+
+      <div class="card">
+        <h3>Kurumsal IT</h3>
+        <p>Altyapı, entegrasyon ve kurumsal sistem çözümleri.</p>
+      </div>
+    </div>
   </main>
 
   <footer>
