--- a/kurumsal.html
+++ b/kurumsal.html
@@ -4,49 +4,21 @@
   <meta charset="UTF-8">
   <title>Kurumsal | RAN Teknoloji</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      color: #222;
-      background: #ffffff;
-    }
-
-    header {
-      padding: 30px 40px;
-      border-bottom: 1px solid #e5e5e5;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    nav a {
-      margin-left: 20px;
-      text-decoration: none;
-      color: #222;
-      font-weight: 500;
-    }
-
-    main {
-      padding: 100px 40px;
-      max-width: 1100px;
-      margin: auto;
-    }
-
-    h1 {
-      font-size: 36px;
-      margin-bottom: 20px;
-    }
-
-    p {
-      font-size: 18px;
-      line-height: 1.6;
-      color: #444;
-    }
+    body{margin:0;font-family:Inter,Arial;background:#020617;color:#e5e7eb}
+    header{padding:24px 48px;display:flex;justify-content:space-between;align-items:center;border-bottom:1px solid rgba(255,255,255,.08)}
+    header strong{color:#38bdf8}
+    nav a{margin-left:24px;color:#e5e7eb;text-decoration:none}
+    nav a:hover{color:#38bdf8}
+    main{max-width:1100px;margin:auto;padding:100px 48px}
+    h1{font-size:42px;margin-bottom:24px}
+    p{font-size:17px;line-height:1.7;color:#cbd5f5}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:32px;margin-top:60px}
+    .box{background:rgba(255,255,255,.04);border-left:4px solid #38bdf8;padding:24px;border-radius:8px}
+    footer{text-align:center;padding:40px;border-top:1px solid rgba(255,255,255,.08);color:#9ca3af}
   </style>
 </head>
-
 <body>
 
 <header>
@@ -54,16 +26,37 @@
   <nav>
     <a href="index.html">Ana Sayfa</a>
     <a href="kurumsal.html">Kurumsal</a>
+    <a href="faaliyet.html">Faaliyet Alanları</a>
+    <a href="projeler.html">Projeler</a>
   </nav>
 </header>
 
 <main>
   <h1>Kurumsal</h1>
   <p>
-    RAN Teknoloji; yenilikçi, güvenilir ve sürdürülebilir
-    teknoloji çözümleri üretmek amacıyla kurulmuştur.
+    RAN Teknoloji; işletmelerin dijital dönüşüm süreçlerinde güvenilir,
+    sürdürülebilir ve stratejik teknoloji çözümleri sunmak amacıyla kurulmuştur.
   </p>
+
+  <div class="grid">
+    <div class="box">
+      <h3>Vizyonumuz</h3>
+      <p>Teknolojiyi iş dünyasında gerçek değer üreten bir güce dönüştürmek.</p>
+    </div>
+    <div class="box">
+      <h3>Misyonumuz</h3>
+      <p>Müşterilerimizin ihtiyaçlarına özel, yenilikçi ve güvenilir çözümler üretmek.</p>
+    </div>
+    <div class="box">
+      <h3>Değerlerimiz</h3>
+      <p>Güven, şeffaflık, kalite, sürdürülebilirlik ve uzun vadeli iş ortaklığı.</p>
+    </div>
+  </div>
 </main>
+
+<footer>
+  © 2026 RAN Teknoloji
+</footer>
 
 </body>
 </html>
